--- a/my-redux/src/index.css
+++ b/my-redux/src/index.css
@@ -1,5 +1,5 @@
 ul {
-  display: inline-flex;
+  /* display: inline-flex; */
     flex-direction: column;
     background-color: rgb(30, 64, 255);
     padding: 5px 7px;
@@ -18,6 +18,8 @@ li{
     border: 10px solid;
 }   
  .MyBorder-green{
-    border-color: green;  
-      display: inline-flex;
+    border-color: green; 
+}
+ .Loading{
+  text-align: center;
 }
